Make page fixes and composer name overflow

--- a/frontend/src/Components/Sheets/Sheets.css
+++ b/frontend/src/Components/Sheets/Sheets.css
@@ -38,7 +38,9 @@
 	text-align: left;
 	margin-left: 10px;
 	line-height: 100%;
-
+	text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .sheet-composer {
